<resources>
    <string name="app_name">Qatar22</string>
    <string name="btnRegistrarResultado">REGISTRAR RESULTADO</string>
    <string name="btnConsultarResultado">CONSULTAR RESULTADO</string>
    <string name="tvTituloRegistro">Introducir Resultado</string>
    <string name="hint_etFechayHora">Introduce la fecha dd/mm/yyyy hh:mi</string>
    <string name="hint_etFase">Introduce la fase: Fase grupos, Octavos,
        Cuartos,Semifinales, Tercer Puesto, Final</string>
    <string name="hint_etEquipo1">Selecciona el equipo 1</string>
    <string name="btnSeleccionar">SELECCIONAR</string>
    <string name="hint_etEquipo2">Selecciona el equipo 2</string>
    <string name="hint_etGoles1">Goles del equipo 1</string>
    <string name="tvGuion">-</string>
    <string name="hint_etGoles2">Goles del equipo 2</string>
    <string name="btnGuardarResultado">GUARDAR RESULTADO</string>
    <string name="btnLimpiarDatos">LIMPIAR DATOS</string>
    <string name="tvConsultaResultado">Consulta  resultado por país</string>
    <string name="hint_etConsultaEquipo">Introduce el país</string>
    <string name="btnAlemania">Alemania</string>
    <string name="btnArabiaSaudi">Arabia Saudí</string>
    <string name="btnArgentina">Argentina</string>
    <string name="tvSeleccionPais">Selección de equipo</string>
    <string name="btnAustralia">Australia</string>
    <string name="btnBelgica">Bélgica</string>
    <string name="btnBrasil">Brasil</string>
    <string name="btnCamerun">Camerún</string>
    <string name="btnCanadá">Canadá</string>
    <string name="btnCoreadelSur">Corea del Sur</string>
    <string name="btnCostaRica">Costa Rica</string>
    <string name="btnCroacia">Croacia</string>
    <string name="btnDinamarca">Dinamarca</string>
    <string name="btnEcuador">Ecuador</string>
    <string name="btnEspania">España</string>
    <string name="btnEstadosUnidos">Estados Unidos</string>
    <string name="btnFrancia">Francia</string>
    <string name="btnGales">Gales</string>
    <string name="btnGhana">Ghana</string>
    <string name="btnHolanda">Holanda</string>
    <string name="btnInglaterra">Inglaterra</string>
    <string name="btnIran">Irán</string>
    <string name="btnJapon">Japón</string>
    <string name="btnMarruecos">Marruecos</string>
    <string name="btnMexico">México</string>
    <string name="btnPolonia">Polonia</string>
    <string name="btnPortugal">Portugal</string>
    <string name="btnQatar">Qatar</string>
    <string name="btnSenegal">Senegal</string>
    <string name="btnSerbia">Serbia</string>
    <string name="btnSuiza">Suiza</string>
    <string name="btnTunez">Túnez</string>
    <string name="btnUruguay">Uruguay</string>
    <string name="hint_etSeleccionPais">Introduce el país seleccionado</string>
    <string name="btnAceptarSeleccion">ACEPTAR</string>
    <string name="btnCancelarSeleccion">CANCELAR</string>
    <string name="sin_seleccion">Debe introducir el país seleccionado</string>
    <string name="txtLimpiarDatos">LIMPIAR DATOS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camposObligatorios">Campo no introducido. Todos los campos son OBLIGATORIOS</string>
    <string name="datosGuardados">DATOS GUARDADOS</string>
    <string name="faseDeGrupos">Fase de Grupos</string>
    <string name="octavos">Octavos</string>
    <string name="cuartos">Cuartos</string>
    <string name="semifinal">Semifinal</string>
    <string name="faseFinal">Final</string>
    <string name="seleccionesIguales">NO se puede introducir la misma SELECCIÓN DOS veces</string>
    <string name="faseCorrecta">Fase no introducida correctamente. Introduzca\"Fase grupos, Octavos, Cuartos, Semifinales, Final</string>
    <string name="faseFrame">Fase de grupos</string>
    <string name="fechaFrame">23/11/2022 17:00</string>
    <string name="Equipo1Frame">España</string>
    <string name="goles1Frame">7</string>
    <string name="separadorFrame">-</string>
    <string name="equipo2Frame">Costa Rica</string>
    <string name="goles2Frame">0</string>
</resources>