<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainRegistro">

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTituloRegistro"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etFechaHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/black"
        android:hint="@string/hint_etFechayHora"
        android:inputType= "datetime"
        android:textSize="@dimen/textSizeHint" />

    <EditText
        android:id="@+id/etFase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:textColorHint="@color/black"
        android:hint="@string/hint_etFase"
        android:inputType="text"
        android:textSize="@dimen/textSizeHint" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFase"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/etEquipo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/black"
            android:hint="@string/hint_etEquipo1"
            android:inputType="text"
            android:textSize="@dimen/textSizeHint" />

        <Button
            android:id="@+id/btnSeleccionar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:backgroundTint="@color/rojoQatar22"
            android:layout_marginRight="@dimen/margenBtEt"
            android:text="@string/btnSeleccionar"
            android:textSize="@dimen/textSizeButton1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFase"
        android:orientation="horizontal"
        android:layout_marginTop="70dp">

        <EditText
            android:id="@+id/etEquipo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/black"
            android:hint="@string/hint_etEquipo2"
            android:inputType="text"
            android:textSize="@dimen/textSizeHint" />

        <Button
            android:id="@+id/btnSeleccionar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:backgroundTint="@color/rojoQatar22"
            android:layout_marginRight="@dimen/margenBtEt"
            android:text="@string/btnSeleccionar"
            android:textSize="@dimen/textSizeButton1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:layout_marginRight="@dimen/margenBtEt"
        android:layout_marginLeft="@dimen/margenBtEt"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/etGoles1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:textColorHint="@color/black"
        android:hint="@string/hint_etGoles1"
        android:inputType="number"
        android:textSize="@dimen/textSizeHint"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvGuion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tvGuion"
        android:textAlignment="center"
        android:textSize="@dimen/textSizeButton"/>

    <EditText
        android:id="@+id/etGoles2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:textColorHint="@color/black"
        android:hint="@string/hint_etGoles2"
        android:inputType="number"
        android:textSize="@dimen/textSizeHint"
        android:textAlignment="center"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnGuardarResultado"
        android:layout_width="@dimen/anchoBotonRegistro"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/btnGuardarResultado"
        android:textSize="@dimen/textSizeButton"
        android:backgroundTint="@color/rojoQatar22"/>

    <Button
        android:id="@+id/btnLimpiarDatos"
        android:layout_width="@dimen/anchoBotonRegistro"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/btnLimpiarDatos"
        android:textSize="@dimen/textSizeButton"
        android:backgroundTint="@color/rojoQatar22"/>


</RelativeLayout>